log/build_2021-06-07_01-36-38/control_pkg/stdout_stderr.log
-- Found ament_cmake: 0.9.8 (/opt/ros/foxy/share/ament_cmake/cmake)
-- Using PYTHON_EXECUTABLE: /usr/bin/python3
-- Found rclcpp: 2.3.1 (/opt/ros/foxy/share/rclcpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Found rosidl_adapter: 1.2.1 (/opt/ros/foxy/share/rosidl_adapter/cmake)
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 1.0.3 (/opt/ros/foxy/share/rmw_implementation_cmake/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found interfaces: 0.0.0 (/home/javierfr/Tesis_ws/V1/install/interfaces/share/interfaces/cmake)
-- Configuring done
-- Generating done
-- Build files have been written to: /home/javierfr/Tesis_ws/V1/build/control_pkg
[35m[1mScanning dependencies of target control_pid_p1_server[0m
[ 50%] [32mBuilding CXX object CMakeFiles/control_pid_p1_server.dir/src/control_pid_p1_server.cpp.o[0m
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_server.cpp: In function ‘void pid_serv(std::shared_ptr<interfaces::srv::ControlPidStart_Request_<std::allocator<void> > >, std::shared_ptr<interfaces::srv::ControlPidStart_Response_<std::allocator<void> > >)’:
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_server.cpp:19:31: error: ‘subs_callback’ was not declared in this scope
   19 |   "image_data", 1, std::bind(&subs_callback,Control_PID_P1_server, _1));
      |                               ^~~~~~~~~~~~~
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_server.cpp:15:80: warning: unused parameter ‘request’ [-Wunused-parameter]
   15 | void pid_serv(const std::shared_ptr<interfaces::srv::ControlPidStart::Request> request,
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_server.cpp:16:63: warning: unused parameter ‘response’ [-Wunused-parameter]
   16 |   std::shared_ptr<interfaces::srv::ControlPidStart::Response> response)
      |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_server.cpp: At global scope:
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_server.cpp:27:72: error: non-member function ‘void subs_callback(interfaces::msg::ImgData_<std::allocator<void> >::SharedPtr)’ cannot have cv-qualifier
   27 | void subs_callback(const interfaces::msg::ImgData::SharedPtr data_msg) const
      |                                                                        ^~~~~
In file included from /opt/ros/foxy/include/rclcpp/service.hpp:34,
                 from /opt/ros/foxy/include/rclcpp/callback_group.hpp:25,
                 from /opt/ros/foxy/include/rclcpp/any_executable.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/memory_strategy.hpp:24,
                 from /opt/ros/foxy/include/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/foxy/include/rclcpp/executor_options.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/executor.hpp:33,
                 from /opt/ros/foxy/include/rclcpp/executors/multi_threaded_executor.hpp:25,
                 from /opt/ros/foxy/include/rclcpp/executors.hpp:21,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_server.cpp:1:
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_server.cpp: In function ‘void subs_callback(interfaces::msg::ImgData_<std::allocator<void> >::SharedPtr)’:
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_server.cpp:29:14: error: invalid use of ‘this’ in non-member function
   29 |  RCLCPP_INFO(this->get_logger(), "Data received" );
      |              ^~~~
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_server.cpp:29:14: error: invalid use of ‘this’ in non-member function
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_server.cpp:29:2: error: template argument 1 is invalid
   29 |  RCLCPP_INFO(this->get_logger(), "Data received" );
      |  ^~~~~~~~~~~
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_server.cpp:29:2: error: template argument 1 is invalid
   29 |  RCLCPP_INFO(this->get_logger(), "Data received" );
      |  ^~~~~~~~~~~
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_server.cpp:29:2: error: template argument 1 is invalid
   29 |  RCLCPP_INFO(this->get_logger(), "Data received" );
      |  ^~~~~~~~~~~
In file included from /opt/ros/foxy/include/rclcpp/client.hpp:40,
                 from /opt/ros/foxy/include/rclcpp/callback_group.hpp:23,
                 from /opt/ros/foxy/include/rclcpp/any_executable.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/memory_strategy.hpp:24,
                 from /opt/ros/foxy/include/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/foxy/include/rclcpp/executor_options.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/executor.hpp:33,
                 from /opt/ros/foxy/include/rclcpp/executors/multi_threaded_executor.hpp:25,
                 from /opt/ros/foxy/include/rclcpp/executors.hpp:21,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_server.cpp:1:
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_server.cpp:29:14: error: invalid use of ‘this’ in non-member function
   29 |  RCLCPP_INFO(this->get_logger(), "Data received" );
      |              ^~~~
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_server.cpp:29:14: error: invalid use of ‘this’ in non-member function
   29 |  RCLCPP_INFO(this->get_logger(), "Data received" );
      |              ^~~~
/home/javierfr/Tesis_ws/V1/src/control_pkg/src/control_pid_p1_server.cpp:27:62: warning: unused parameter ‘data_msg’ [-Wunused-parameter]
   27 | void subs_callback(const interfaces::msg::ImgData::SharedPtr data_msg) const
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
make[2]: *** [CMakeFiles/control_pid_p1_server.dir/build.make:63: CMakeFiles/control_pid_p1_server.dir/src/control_pid_p1_server.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/control_pid_p1_server.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
